TPI/obj/integrador.output
Estado 2 conflictos: 10 desplazamiento/reducción, 10 reducción/reducción
Estado 4 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 14 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 15 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 16 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 17 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 18 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 19 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 20 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 21 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 22 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 24 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 25 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 26 conflictos: 1 desplazamiento/reducción, 10 reducción/reducción
Estado 28 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 29 conflictos: 10 reducción(ones)/reducción(ones)
Estado 36 conflictos: 1 reducción(ones)/reducción(ones)
Estado 51 conflictos: 2 desplazamiento(s)/reducción(ones)
Estado 54 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 89 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 90 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 91 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 92 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 93 conflictos: 1 reducción(ones)/reducción(ones)
Estado 94 conflictos: 7 desplazamiento(s)/reducción(ones)
Estado 101 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 103 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 142 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 150 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 152 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 155 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 156 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 157 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 158 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 159 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 160 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 161 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 162 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 163 conflictos: 10 desplazamiento/reducción, 3 reducción/reducción
Estado 166 conflictos: 1 reducción(ones)/reducción(ones)
Estado 171 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 172 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 173 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 174 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 175 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 176 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 177 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 178 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 179 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 180 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 181 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 182 conflictos: 12 desplazamiento(s)/reducción(ones)
Estado 199 conflictos: 1 reducción(ones)/reducción(ones)
Estado 208 conflictos: 13 reducción(ones)/reducción(ones)
Estado 226 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 238 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 249 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 263 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 265 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción
Estado 266 conflictos: 10 desplazamiento/reducción, 2 reducción/reducción
Estado 283 conflictos: 10 desplazamiento/reducción, 1 reducción/reducción


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line
    3      | ERROR_LEXICO

    4 line: '\n'
    5     | listadoDeSentenciasDeDeclaracion saltoOpcional
    6     | invocacionFuncion saltoOpcional
    7     | prototipoFuncion saltoOpcional
    8     | desarrolloFuncion saltoOpcional
    9     | sentenciaSwitch saltoOpcional
   10     | sentenciaWhile saltoOpcional
   11     | sentenciaFor saltoOpcional
   12     | sentenciaDoWhile saltoOpcional
   13     | sentenciaIfElse saltoOpcional
   14     | sentenciaAsignacion saltoOpcional
   15     | incrementoDecremento saltoOpcional
   16     | listadoDeSentenciasDeAsignacion saltoOpcional
   17     | error saltoOpcional

   18 saltoOpcional: /* vacío */
   19              | '\n' saltoOpcional

   20 invocacionFuncion: IDENTIFICADOR '(' listaParametrosInvocacion ')' ';'

   21 listadoDeSentencias: /* vacío */
   22                    | sentenciaSwitch listadoDeSentencias
   23                    | sentenciaDoWhile listadoDeSentencias
   24                    | sentenciaFor listadoDeSentencias
   25                    | sentenciaWhile listadoDeSentencias
   26                    | sentenciaIfElse listadoDeSentencias
   27                    | sentenciaAsignacion listadoDeSentencias
   28                    | sentenciaReturn listadoDeSentencias
   29                    | listadoDeSentenciasDeDeclaracion listadoDeSentencias
   30                    | invocacionFuncion saltoOpcional
   31                    | incrementoDecremento listadoDeSentencias
   32                    | '\n' listadoDeSentencias

   33 sentenciaDoWhile: DO saltoOpcional '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

   34 sentenciaFor: FOR '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

   35 sentenciaDecOAsig: sentenciaDeclaracionParaFor
   36                  | IDENTIFICADOR ';'
   37                  | sentenciaAsignacion

   38 incrementoParaFor: IDENTIFICADOR incrementoParaForAuxiliar

   39 incrementoParaForAuxiliar: MAS_MAS
   40                          | MENOS_MENOS

   41 incrementoDecremento: IDENTIFICADOR MAS_MAS ';'
   42                     | IDENTIFICADOR MENOS_MENOS ';'

   43 $@1: /* vacío */

   44 sentenciaIfElse: IF '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse
   45                | error saltoOpcional

   46 sentenciaElse: /* vacío */
   47              | ELSE saltoOpcional '{' listadoDeSentencias '}'

   48 sentenciaWhile: WHILE '(' exp ')' saltoOpcional '{' listadoDeSentencias '}'

   49 sentenciaSwitch: SWITCH '(' exp ')' saltoOpcional '{' sentenciaCase '}'

   50 sentenciaCase: /* vacío */
   51              | CASE exp ':' listadoDeSentencias BREAK ';'
   52              | sentenciaCase DEFAULT ':' listadoDeSentencias

   53 sentenciaReturn: RETURN exp ';'

   54 listadoDeSentenciasDeDeclaracion: /* vacío */
   55                                 | sentenciaDeclaracion
   56                                 | sentenciaDeclaracion ';' listadoDeSentenciasDeDeclaracion

   57 listadoDeSentenciasDeAsignacion: /* vacío */
   58                                | sentenciaAsignacion
   59                                | sentenciaAsignacion ';' listadoDeSentenciasDeAsignacion

   60 sentenciaDeclaracionParaFor: TIPO_DATO IDENTIFICADOR '=' exp ';'

   61 sentenciaDeclaracion: TIPO_DATO IDENTIFICADOR opcional1 ';'
   62                     | TIPO_DATO listaIdentificadores ';'
   63                     | TIPO_DATO IDENTIFICADOR '[' expC ']' ';'
   64                     | TIPO_DATO IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   65                     | TIPO_DATO '*' IDENTIFICADOR ';'
   66                     | error saltoOpcional

   67 desarrolloFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametrosFuncion ')' saltoOpcional '{' listadoDeSentencias '}' ';'

   68 prototipoFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametrosPrototipo ')' ';'

   69 opcional1: /* vacío */
   70          | sentenciaAsignacionAuxiliar exp

   71 auxi: expC ',' auxi
   72     | expC

   73 sentenciaAsignacion: parametro sentenciaAsignacionAuxiliar exp ';'

   74 sentenciaAsignacionAuxiliar: '='
   75                            | MAS_IGUAL
   76                            | MENOS_IGUAL
   77                            | POR_IGUAL
   78                            | DIVIDIDO_IGUAL

   79 parametro: IDENTIFICADOR

   80 listaIdentificadores: identificadorA
   81                     | listaIdentificadores ',' identificadorA

   82 identificadorA: IDENTIFICADOR
   83               | IDENTIFICADOR '=' exp
   84               | IDENTIFICADOR MAS_IGUAL exp
   85               | IDENTIFICADOR MENOS_IGUAL exp
   86               | IDENTIFICADOR POR_IGUAL exp
   87               | IDENTIFICADOR DIVIDIDO_IGUAL exp

   88 listaParametrosPrototipo: /* vacío */
   89                         | TIPO_DATO
   90                         | TIPO_DATO ',' listaParametrosPrototipo
   91                         | listaParametrosFuncion

   92 listaParametrosFuncion: /* vacío */
   93                       | TIPO_DATO IDENTIFICADOR
   94                       | TIPO_DATO IDENTIFICADOR ',' listaParametrosFuncion

   95 listaParametrosInvocacion: /* vacío */
   96                          | noTerminal listaParametrosInvocacionAuxiliar

   97 listaParametrosInvocacionAuxiliar: ',' noTerminal listaParametrosInvocacionAuxiliar
   98                                  | /* vacío */

   99 noTerminal: IDENTIFICADOR
  100           | CHAR
  101           | DECIMAL
  102           | HEXA
  103           | OCTAL
  104           | NUM_R
  105           | noTerminalFinal IGUALDAD noTerminalFinal
  106           | noTerminalFinal MAYOR_IGUAL noTerminalFinal
  107           | noTerminalFinal MENOR_IGUAL noTerminalFinal
  108           | noTerminalFinal DESIGUALDAD noTerminalFinal
  109           | noTerminalFinal AND noTerminalFinal
  110           | noTerminalFinal OR noTerminalFinal

  111 noTerminalFinal: IDENTIFICADOR
  112                | CHAR
  113                | DECIMAL
  114                | HEXA
  115                | OCTAL
  116                | NUM_R

  117 exp: LITERAL_CADENA
  118    | expC

  119 expC: IDENTIFICADOR
  120     | CHAR
  121     | expC '+' expC
  122     | expC '-' expC
  123     | expC '>' expC
  124     | expC '<' expC
  125     | expC IGUALDAD expC
  126     | expC MAYOR_IGUAL expC
  127     | expC MENOR_IGUAL expC
  128     | expC DESIGUALDAD expC
  129     | expC AND expC
  130     | expC OR expC
  131     | DECIMAL
  132     | HEXA
  133     | OCTAL
  134     | NUM_R
  135     | expC '*' expC
  136     | expC '/' expC


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 4 19 32
'(' (40) 20 33 34 44 48 49 67 68
')' (41) 20 33 34 44 48 49 67 68
'*' (42) 65 135
'+' (43) 121
',' (44) 71 81 90 94 97
'-' (45) 122
'/' (47) 136
':' (58) 51 52
';' (59) 20 33 34 36 41 42 51 53 56 59 60 61 62 63 64 65 67 68 73
'<' (60) 124
'=' (61) 60 64 74 83
'>' (62) 123
'[' (91) 63 64
']' (93) 63 64
'{' (123) 33 34 44 47 48 49 64 67
'}' (125) 33 34 44 47 48 49 64 67
error (256) 17 45 66
FOR (258) 34
IF (259) 44
ELSE (260) 47
RETURN (261) 53
SWITCH (262) 49
DECIMAL (263) 101 113 131
HEXA (264) 102 114 132
OCTAL (265) 103 115 133
NUM_R (266) 104 116 134
IDENTIFICADOR (267) 20 36 38 41 42 60 61 63 64 65 67 68 79 82 83 84
    85 86 87 93 94 99 111 119
TIPO_DATO (268) 60 61 62 63 64 65 67 68 89 90 93 94
DO (269) 33
WHILE (270) 33 48
CHAR (271) 100 112 120
LITERAL_CADENA (272) 117
MAYOR_IGUAL (273) 106 126
MENOR_IGUAL (274) 107 127
IGUALDAD (275) 105 125
AND (276) 109 129
OR (277) 110 130
DESIGUALDAD (278) 108 128
CASE (279) 51
BREAK (280) 51
DEFAULT (281) 52
MAS_IGUAL (282) 75 84
MENOS_IGUAL (283) 76 85
POR_IGUAL (284) 77 86
DIVIDIDO_IGUAL (285) 78 87
MAS_MAS (286) 39 41
MENOS_MENOS (287) 40 42
ERROR_LEXICO (288) 3


No terminales con las reglas donde aparecen

$accept (51)
    en la izquierda: 0
input (52)
    en la izquierda: 1 2 3, en la derecha: 0 2
line (53)
    en la izquierda: 4 5 6 7 8 9 10 11 12 13 14 15 16 17, en la derecha:
    2
saltoOpcional (54)
    en la izquierda: 18 19, en la derecha: 5 6 7 8 9 10 11 12 13 14
    15 16 17 19 30 33 34 44 45 47 48 49 66 67
invocacionFuncion (55)
    en la izquierda: 20, en la derecha: 6 30
listadoDeSentencias (56)
    en la izquierda: 21 22 23 24 25 26 27 28 29 30 31 32, en la derecha:
    22 23 24 25 26 27 28 29 31 32 33 34 44 47 48 51 52 67
sentenciaDoWhile (57)
    en la izquierda: 33, en la derecha: 12 23
sentenciaFor (58)
    en la izquierda: 34, en la derecha: 11 24
sentenciaDecOAsig (59)
    en la izquierda: 35 36 37, en la derecha: 34
incrementoParaFor (60)
    en la izquierda: 38, en la derecha: 34
incrementoParaForAuxiliar (61)
    en la izquierda: 39 40, en la derecha: 38
incrementoDecremento (62)
    en la izquierda: 41 42, en la derecha: 15 31
sentenciaIfElse (63)
    en la izquierda: 44 45, en la derecha: 13 26
$@1 (64)
    en la izquierda: 43, en la derecha: 44
sentenciaElse (65)
    en la izquierda: 46 47, en la derecha: 44
sentenciaWhile (66)
    en la izquierda: 48, en la derecha: 10 25
sentenciaSwitch (67)
    en la izquierda: 49, en la derecha: 9 22
sentenciaCase (68)
    en la izquierda: 50 51 52, en la derecha: 49 52
sentenciaReturn (69)
    en la izquierda: 53, en la derecha: 28
listadoDeSentenciasDeDeclaracion (70)
    en la izquierda: 54 55 56, en la derecha: 5 29 56
listadoDeSentenciasDeAsignacion (71)
    en la izquierda: 57 58 59, en la derecha: 16 59
sentenciaDeclaracionParaFor (72)
    en la izquierda: 60, en la derecha: 35
sentenciaDeclaracion (73)
    en la izquierda: 61 62 63 64 65 66, en la derecha: 55 56
desarrolloFuncion (74)
    en la izquierda: 67, en la derecha: 8
prototipoFuncion (75)
    en la izquierda: 68, en la derecha: 7
opcional1 (76)
    en la izquierda: 69 70, en la derecha: 61
auxi (77)
    en la izquierda: 71 72, en la derecha: 64 71
sentenciaAsignacion (78)
    en la izquierda: 73, en la derecha: 14 27 37 58 59
sentenciaAsignacionAuxiliar (79)
    en la izquierda: 74 75 76 77 78, en la derecha: 70 73
parametro (80)
    en la izquierda: 79, en la derecha: 73
listaIdentificadores (81)
    en la izquierda: 80 81, en la derecha: 62 81
identificadorA (82)
    en la izquierda: 82 83 84 85 86 87, en la derecha: 80 81
listaParametrosPrototipo (83)
    en la izquierda: 88 89 90 91, en la derecha: 68 90
listaParametrosFuncion (84)
    en la izquierda: 92 93 94, en la derecha: 67 91 94
listaParametrosInvocacion (85)
    en la izquierda: 95 96, en la derecha: 20
listaParametrosInvocacionAuxiliar (86)
    en la izquierda: 97 98, en la derecha: 96 97
noTerminal (87)
    en la izquierda: 99 100 101 102 103 104 105 106 107 108 109 110,
    en la derecha: 96 97
noTerminalFinal (88)
    en la izquierda: 111 112 113 114 115 116, en la derecha: 105 106
    107 108 109 110
exp (89)
    en la izquierda: 117 118, en la derecha: 33 44 48 49 51 53 60 70
    73 83 84 85 86 87
expC (90)
    en la izquierda: 119 120 121 122 123 124 125 126 127 128 129 130
    131 132 133 134 135 136, en la derecha: 34 63 64 71 72 118 121
    122 123 124 125 126 127 128 129 130 135 136


estado 0

    0 $accept: . input $end

    ERROR_LEXICO  desplazar e ir al estado 1

    $default  reduce usando la regla 1 (input)

    input  ir al estado 2


estado 1

    3 input: ERROR_LEXICO .

    $default  reduce usando la regla 3 (input)


estado 2

    0 $accept: input . $end
    2 input: input . line

    $end           desplazar e ir al estado 3
    error          desplazar e ir al estado 4
    FOR            desplazar e ir al estado 5
    IF             desplazar e ir al estado 6
    SWITCH         desplazar e ir al estado 7
    IDENTIFICADOR  desplazar e ir al estado 8
    TIPO_DATO      desplazar e ir al estado 9
    DO             desplazar e ir al estado 10
    WHILE          desplazar e ir al estado 11
    '\n'           desplazar e ir al estado 12

    $end           [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    $end           [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    error          [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    error          [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    FOR            [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    FOR            [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    IF             [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    IF             [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    SWITCH         [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    SWITCH         [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    IDENTIFICADOR  [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    IDENTIFICADOR  [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    TIPO_DATO      [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    TIPO_DATO      [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    DO             [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    DO             [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    WHILE          [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    WHILE          [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]
    '\n'           [reduce usando la regla 54 (listadoDeSentenciasDeDeclaracion)]
    '\n'           [reduce usando la regla 57 (listadoDeSentenciasDeAsignacion)]

    line                              ir al estado 13
    invocacionFuncion                 ir al estado 14
    sentenciaDoWhile                  ir al estado 15
    sentenciaFor                      ir al estado 16
    incrementoDecremento              ir al estado 17
    sentenciaIfElse                   ir al estado 18
    sentenciaWhile                    ir al estado 19
    sentenciaSwitch                   ir al estado 20
    listadoDeSentenciasDeDeclaracion  ir al estado 21
    listadoDeSentenciasDeAsignacion   ir al estado 22
    sentenciaDeclaracion              ir al estado 23
    desarrolloFuncion                 ir al estado 24
    prototipoFuncion                  ir al estado 25
    sentenciaAsignacion               ir al estado 26
    parametro                         ir al estado 27


estado 3

    0 $accept: input $end .

    $default  aceptar


estado 4

   17 line: error . saltoOpcional
   45 sentenciaIfElse: error . saltoOpcional
   66 sentenciaDeclaracion: error . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 29


estado 5

   34 sentenciaFor: FOR . '(' sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 30


estado 6

   44 sentenciaIfElse: IF . '(' exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse

    '('  desplazar e ir al estado 31


estado 7

   49 sentenciaSwitch: SWITCH . '(' exp ')' saltoOpcional '{' sentenciaCase '}'

    '('  desplazar e ir al estado 32


estado 8

   20 invocacionFuncion: IDENTIFICADOR . '(' listaParametrosInvocacion ')' ';'
   41 incrementoDecremento: IDENTIFICADOR . MAS_MAS ';'
   42                     | IDENTIFICADOR . MENOS_MENOS ';'
   79 parametro: IDENTIFICADOR .

    MAS_MAS      desplazar e ir al estado 33
    MENOS_MENOS  desplazar e ir al estado 34
    '('          desplazar e ir al estado 35

    $default  reduce usando la regla 79 (parametro)


estado 9

   61 sentenciaDeclaracion: TIPO_DATO . IDENTIFICADOR opcional1 ';'
   62                     | TIPO_DATO . listaIdentificadores ';'
   63                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' ';'
   64                     | TIPO_DATO . IDENTIFICADOR '[' expC ']' '=' '{' auxi '}' ';'
   65                     | TIPO_DATO . '*' IDENTIFICADOR ';'
   67 desarrolloFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametrosFuncion ')' saltoOpcional '{' listadoDeSentencias '}' ';'
   68 prototipoFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametrosPrototipo ')' ';'

    IDENTIFICADOR  desplazar e ir al estado 36
    '*'            desplazar e ir al estado 37

    listaIdentificadores  ir al estado 38
    identificadorA        ir al estado 39


estado 10

   33 sentenciaDoWhile: DO . saltoOpcional '{' listadoDeSentencias '}' WHILE '(' exp ')' ';'

    '\n'  desplazar e ir al estado 28

    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 40


estado 11

   48 sentenciaWhile: WHILE . '(' exp ')' saltoOpcional '{' listadoDeSentencias '}'

    '('  desplazar e ir al estado 41


estado 12

    4 line: '\n' .

    $default  reduce usando la regla 4 (line)


estado 13

    2 input: input line .

    $default  reduce usando la regla 2 (input)


estado 14

    6 line: invocacionFuncion . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 42


estado 15

   12 line: sentenciaDoWhile . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 43


estado 16

   11 line: sentenciaFor . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 44


estado 17

   15 line: incrementoDecremento . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 45


estado 18

   13 line: sentenciaIfElse . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 46


estado 19

   10 line: sentenciaWhile . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 47


estado 20

    9 line: sentenciaSwitch . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 48


estado 21

    5 line: listadoDeSentenciasDeDeclaracion . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 49


estado 22

   16 line: listadoDeSentenciasDeAsignacion . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 50


estado 23

   55 listadoDeSentenciasDeDeclaracion: sentenciaDeclaracion .
   56                                 | sentenciaDeclaracion . ';' listadoDeSentenciasDeDeclaracion

    ';'  desplazar e ir al estado 51

    $default  reduce usando la regla 55 (listadoDeSentenciasDeDeclaracion)


estado 24

    8 line: desarrolloFuncion . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 52


estado 25

    7 line: prototipoFuncion . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 53


estado 26

   14 line: sentenciaAsignacion . saltoOpcional
   58 listadoDeSentenciasDeAsignacion: sentenciaAsignacion .
   59                                | sentenciaAsignacion . ';' listadoDeSentenciasDeAsignacion

    '\n'  desplazar e ir al estado 28
    ';'   desplazar e ir al estado 54

    $end           reduce usando la regla 18 (saltoOpcional)
    $end           [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    error          reduce usando la regla 18 (saltoOpcional)
    error          [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    FOR            reduce usando la regla 18 (saltoOpcional)
    FOR            [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    IF             reduce usando la regla 18 (saltoOpcional)
    IF             [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    SWITCH         reduce usando la regla 18 (saltoOpcional)
    SWITCH         [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    IDENTIFICADOR  reduce usando la regla 18 (saltoOpcional)
    IDENTIFICADOR  [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    TIPO_DATO      reduce usando la regla 18 (saltoOpcional)
    TIPO_DATO      [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    DO             reduce usando la regla 18 (saltoOpcional)
    DO             [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    WHILE          reduce usando la regla 18 (saltoOpcional)
    WHILE          [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    '\n'           [reduce usando la regla 18 (saltoOpcional)]
    '\n'           [reduce usando la regla 58 (listadoDeSentenciasDeAsignacion)]
    $default       reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 55


estado 27

   73 sentenciaAsignacion: parametro . sentenciaAsignacionAuxiliar exp ';'

    MAS_IGUAL       desplazar e ir al estado 56
    MENOS_IGUAL     desplazar e ir al estado 57
    POR_IGUAL       desplazar e ir al estado 58
    DIVIDIDO_IGUAL  desplazar e ir al estado 59
    '='             desplazar e ir al estado 60

    sentenciaAsignacionAuxiliar  ir al estado 61


estado 28

   19 saltoOpcional: '\n' . saltoOpcional

    '\n'  desplazar e ir al estado 28

    '\n'      [reduce usando la regla 18 (saltoOpcional)]
    $default  reduce usando la regla 18 (saltoOpcional)

    saltoOpcional  ir al estado 62


estado 29

   17 line: error saltoOpcional .
   45 sentenciaIfElse: error saltoOpcional .
   66 sentenciaDeclaracion: error saltoOpcional .

    $end           reduce usando la regla 17 (line)
    $end           [reduce usando la regla 45 (sentenciaIfElse)]
    $end           [reduce usando la regla 66 (sentenciaDeclaracion)]
    error          reduce usando la regla 17 (line)
    error          [reduce usando la regla 45 (sentenciaIfElse)]
    error          [reduce usando la regla 66 (sentenciaDeclaracion)]
    FOR            reduce usando la regla 17 (line)
    FOR            [reduce usando la regla 45 (sentenciaIfElse)]
    FOR            [reduce usando la regla 66 (sentenciaDeclaracion)]
    IF             reduce usando la regla 17 (line)
    IF             [reduce usando la regla 45 (sentenciaIfElse)]
    IF             [reduce usando la regla 66 (sentenciaDeclaracion)]
    SWITCH         reduce usando la regla 17 (line)
    SWITCH         [reduce usando la regla 45 (sentenciaIfElse)]
    SWITCH         [reduce usando la regla 66 (sentenciaDeclaracion)]
    IDENTIFICADOR  reduce usando la regla 17 (line)
    IDENTIFICADOR  [reduce usando la regla 45 (sentenciaIfElse)]
    IDENTIFICADOR  [reduce usando la regla 66 (sentenciaDeclaracion)]
    TIPO_DATO      reduce usando la regla 17 (line)
    TIPO_DATO      [reduce usando la regla 45 (sentenciaIfElse)]
    TIPO_DATO      [reduce usando la regla 66 (sentenciaDeclaracion)]
    DO             reduce usando la regla 17 (line)
    DO             [reduce usando la regla 45 (sentenciaIfElse)]
    DO             [reduce usando la regla 66 (sentenciaDeclaracion)]
    WHILE          reduce usando la regla 17 (line)
    WHILE          [reduce usando la regla 45 (sentenciaIfElse)]
    WHILE          [reduce usando la regla 66 (sentenciaDeclaracion)]
    '\n'           reduce usando la regla 17 (line)
    '\n'           [reduce usando la regla 45 (sentenciaIfElse)]
    '\n'           [reduce usando la regla 66 (sentenciaDeclaracion)]
    ';'            reduce usando la regla 66 (sentenciaDeclaracion)
    $default       reduce usando la regla 17 (line)


estado 30

   34 sentenciaFor: FOR '(' . sentenciaDecOAsig expC ';' incrementoParaFor ')' saltoOpcional '{' listadoDeSentencias '}'

    IDENTIFICADOR  desplazar e ir al estado 63
    TIPO_DATO      desplazar e ir al estado 64

    sentenciaDecOAsig            ir al estado 65
    sentenciaDeclaracionParaFor  ir al estado 66
    sentenciaAsignacion          ir al estado 67
    parametro                    ir al estado 27


estado 31

   44 sentenciaIfElse: IF '(' . exp ')' saltoOpcional '{' listadoDeSentencias '}' $@1 sentenciaElse

    DECIMAL         desplazar e ir al estado 68
    HEXA            desplazar e ir al estado 69
    OCTAL           desplazar e ir al estado 70
    NUM_R           desplazar e ir al estado 71
    IDENTIFICADOR   desplazar e ir al estado 72
    CHAR            desplazar e ir al estado 73
    LITERAL_CADENA  desplazar e ir al estado 74

    exp   ir al estado 75
    expC  ir al estado 76


estado 32

   49 sentenciaSwitch: SWITCH '(' . exp ')' saltoOpcional '{' sentenciaCase '}'

    DECIMAL         desplazar e ir al estado 68
    HEXA            desplazar e ir al estado 69
    OCTAL           desplazar e ir al estado 70
    NUM_R           desplazar e ir al estado 71
    IDENTIFICADOR   desplazar e ir al estado 72
    CHAR            desplazar e ir al estado 73
    LITERAL_CADENA  desplazar e ir al estado 74

    exp   ir al estado 77
    expC  ir al estado 76


estado 33

   41 incrementoDecremento: IDENTIFICADOR MAS_MAS . ';'

    ';'  desplazar e ir al estado 78


estado 34

   42 incrementoDecremento: IDENTIFICADOR MENOS_MENOS . ';'

    ';'  desplazar e ir al estado 79


estado 35

   20 invocacionFuncion: IDENTIFICADOR '(' . listaParametrosInvocacion ')' ';'
